# joke-retrieval-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  joke_service_pb2.py  joke_service_pb2_grpc.py  pyproject.toml  setup.sh
.devcontainer/: README.md  devcontainer.json  docker-compose.extend.yml  postCreateCommand.sh
app/: main.py
app/api/: __init__.py  fastmcp_server.py  grpc_server.py
app/core/: config.py  embeddings.py
app/db/: database.py
app/models/: joke.py
app/utils/: data_loader.py  grpc_client.py  mcp_client.py
chroma_db/50f26b7b-7192-4c2c-9e2c-da4b7474ae2a/: index_metadata.pickle
data/: jokes.json  piadas.json  puns.json  sample_jokes.json
migrations/: env.py
proto/: joke_service.proto
tests/: test_embeddings.py  test_fastmcp_server.py  test_grpc_server.py  test_main.py  test_mcp_client.py
